--- a/config.properties.example
+++ b/config.properties.example
@@ -1,26 +1,26 @@
-KERNEL_SOURCE=
-KERNEL_SOURCE_BRANCH=
-KERNEL_CONFIG=
-KERNEL_IMAGE_NAME=
+KERNEL_SOURCE=https://github.com/LineageOS/android_kernel_xiaomi_sm8250.git
+KERNEL_SOURCE_BRANCH=lineage-21
+KERNEL_CONFIG=vendor/xiaomi/alioth.config
+KERNEL_IMAGE_NAME=Image
 ARCH=arm64
 
 ENABLE_CLANG=true
-USE_AOSP_CLANG=true
-AOSP_CLANG_SYSTEM=linux-x86
-AOSP_CLANG_BRANCH=master
-AOSP_CLANG_VERSION=r450784e
-USE_CUSTOM_CLANG=false
-CUSTOM_CLANG_SOURCE=https://github.com/magojohnji/ZyCromerZ-Clang.git
-CUSTOM_CLANG_BRANCH=main
+USE_AOSP_CLANG=flase
+AOSP_CLANG_SYSTEM=
+AOSP_CLANG_BRANCH=
+AOSP_CLANG_VERSION=
+USE_CUSTOM_CLANG=true
+CUSTOM_CLANG_SOURCE=https://github.com/ZyCromerZ/Clang/releases/download/10.0.1-20220724-release/Clang-10.0.1-20220724.tar.gz
+CUSTOM_CLANG_BRANCH=
 
-ENABLE_GCC=true
-ENABLE_AOSP_GCC_ARM64=true
-ENABLE_AOSP_GCC_ARM32=true
-AOSP_GCC_SYSTEM=linux-x86
-AOSP_GCC_ARM64_VERSION=aarch64-linux-android-4.9
-AOSP_GCC_ARM32_VERSION=arm-linux-androideabi-4.9
-AOSP_GCC_ANDROID_VERSION=12.1.0
-AOSP_GCC_RELEASE=r27
+ENABLE_GCC=false
+ENABLE_AOSP_GCC_ARM64=false
+ENABLE_AOSP_GCC_ARM32=false
+AOSP_GCC_SYSTEM=
+AOSP_GCC_ARM64_VERSION=
+AOSP_GCC_ARM32_VERSION=
+AOSP_GCC_ANDROID_VERSION=
+AOSP_GCC_RELEASE=
 USE_CUSTOM_GCC_64=false
 CUSTOM_GCC_64_SOURCE=
 CUSTOM_GCC_64_BRANCH=
@@ -31,20 +31,22 @@ CUSTOM_GCC_32_BRANCH=
 CUSTOM_GCC_32_BIN=arm-linux-androideabi-
 
 ENABLE_KERNELSU=true
-KERNELSU_INSTALLER=
+KERNELSU_INSTALLER=https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh
 KERNELSU_TAG=main
 KSU_EXPECTED_SIZE=
 KSU_EXPECTED_HASH=
-BUILD_KERNELSU_BOOT_IMG=true
+BUILD_KERNELSU_BOOT_IMG=flash
 KERNELSU_SOURCE_BOOT_IMAGE=
+
+MIX_KERNELSU_MAGISK_BOOT_IMAGE=false
 
 DISABLE-LTO=false
 DISABLE_CC_WERROR=false
 ADD_KPROBES_CONFIG=true
 ADD_OVERLAYFS_CONFIG=true
 ENABLE_CCACHE=true
-NEED_DTBO=false
+NEED_DTBO=true
 BUILDER_HOST=Github-Action
 
 TC_CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
-EXTRA_CMDS:LD=ld.lld
+EXTRA_CMDS:NM=llvm-nm OBJDUMP=llvm-objdump STRIP=llvm-strip
